# bariloflights

./: .gitignore  Dockerfile  ReadMe.MD  airflow.cfg  docker-compose.yaml  pyproject.toml
.github/workflows/: run_tests.yaml
dags/: bariloflights_dag.py  distinct_bariloflights_dag.py  get_exchange_rate_dag.py
dags/scripts/: distinct_flights.py  get_booking_flights.py  get_exchange_rate.py  transform_booking_flights.py
metabase.db/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
tests/: test_distinct_flights.py  test_transform_booking_flights.py
